#63 - removing given when then, removing singleton list and organizing imports