@@ -9,7 +9,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -35,7 +34,7 @@ public class DefaultFindCommodityMarketInfoUseCaseTest {
     @Test
     public void testFindAll() {
         CommodityMarketInfo mockMarketInfo = mock(CommodityMarketInfo.class);
-        List<CommodityMarketInfo> expectedMarketInfoList = Collections.singletonList(mockMarketInfo);
+        List<CommodityMarketInfo> expectedMarketInfoList = List.of(mockMarketInfo);
 
         when(commodityMarketInfoRepository.findAllCommodityMarketInfo()).thenReturn(expectedMarketInfoList);
 
